...
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                    <state key="normal" title="Sign In">
                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                                <rect key="frame" x="184" y="402" width="400" height="220"/>
                                <subviews>
                                    <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WOo-Hb-uUr" userLabel="email  text field">
                                        <rect key="frame" x="0.0" y="0.0" width="400" height="50"/>
                                        <color key="backgroundColor" name="Red1"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yoY-sN-R6d" userLabel="password text field">
                                        <rect key="frame" x="0.0" y="90" width="400" height="50"/>
                                        <color key="backgroundColor" name="Red1"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
                                        <state key="normal" title="Sign in">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cQd-z8-GuW">
                                        <rect key="frame" x="0.0" y="67" width="250" height="45"/>
                                        <constraints>
...
                                            <constraint firstAttribute="height" constant="30" id="SUe-HP-qjU"/>
                                        </constraints>
                                        <state key="normal" title="Create Account">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                <items>
                                    <navigationItem id="m9d-q2-Q5I">
                                        <barButtonItem key="rightBarButtonItem" title="Logout" id="Bi1-qI-iz7">
                                            <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
...
